--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,7 +439,7 @@ main {
 }
 
 /*  BANNIERE des differentes pages  */
-.hero-section .animated1, .hero-section1 .animated1, .hero-section2 .animated1, .hero-section3 .animated1, .hero-section4 .animated1, .hero-section5 .animated1, .hero-section6 .animated1 {
+.banniere .animated1, .banniere1 .animated1, .banniere2 .animated1, .banniere3 .animated1, .banniere4 .animated1, .banniere5 .animated1, .banniere6 .animated1 {
   margin-top: 80px;
   background-color: rgba(38, 30, 117, 0.5); 
   -webkit-background-clip: text;
@@ -447,7 +447,7 @@ main {
   font-family: 'Arial', sans-serif;
 }
 
-.hero-section .animated2, .hero-section1 .animated2, .hero-section2 .animated2, .hero-section3 .animated2, .hero-section4 .animated2, .hero-section5 .animated2, .hero-section6 .animated2 {
+.banniere .animated2, .banniere1 .animated2, .banniere2 .animated2, .banniere3 .animated2, .banniere4 .animated2, .banniere5 .animated2, .banniere6 .animated2 {
   background-color: rgba(0, 0, 0, 0.5); 
   color: #fff;
   padding: 10px 20px;
@@ -455,7 +455,8 @@ main {
   display: inline-block; 
 }
 
-.hero-section {
+.banniere {
+  position: relative;
   background-image: url('../images/port/port12.png'), linear-gradient(#348CD2, #FFFFFF);
   background-repeat: no-repeat;
   background-size: 100%;
@@ -464,7 +465,7 @@ main {
   height: 100vh;
 }
 
-.hero-section1 {
+.banniere1 {
   position: relative;
   background-image: url('../images/port/port6.png'), linear-gradient(#348CD2, #FFFFFF);
   background-repeat: no-repeat;
@@ -474,7 +475,7 @@ main {
   height: 100vh;
 }
 
-.hero-section2 {
+.banniere2 {
   position: relative;
   background-image: url('../images/port/port7.png'), linear-gradient(#348CD2, #FFFFFF);
   background-repeat: no-repeat;
@@ -484,7 +485,8 @@ main {
   height: 100vh;
 }
 
-.hero-section3 {
+.banniere3 {
+  position: relative;
   background-image: url('../images/port/port10.png'), linear-gradient(#348CD2, #FFFFFF);
   background-repeat: no-repeat;
   background-size: 100%;
@@ -493,7 +495,7 @@ main {
   height: 100vh;
 }
 
-.hero-section4 {
+.banniere4 {
   position: relative;
   background-image: url('../images/port/port11.png'), linear-gradient(#348CD2, #FFFFFF);
   background-repeat: no-repeat;
@@ -503,7 +505,8 @@ main {
   height: 100vh;
 }
 
-.hero-section5 {
+.banniere5 {
+  position: relative;
   background-image: url('../images/port/port13.png'), linear-gradient(#348CD2, #FFFFFF);
   background-repeat: no-repeat;
   background-size: 100%;
@@ -512,7 +515,7 @@ main {
   height: 70vh;
 }
 
-.hero-section6 {
+.banniere6 {
   position: relative;
   background-image: url('../images/port/port9.png'), linear-gradient(#348CD2, #FFFFFF);
   background-repeat: no-repeat;
@@ -1338,7 +1341,7 @@ border-radius: 15px;}
 
 /*  RESPONSIVE  */
 @media screen and (min-width: 2160px) {
-	.hero-section {
+	.banniere {
 	  background-size: 100% 90%;
 	}
 }
@@ -1351,7 +1354,7 @@ border-radius: 15px;}
 }
 
 @media screen and (max-width: 1240px) {
-	.hero-section {
+	.banniere {
 	  background-size: 116%;
 	}
 }
@@ -1381,7 +1384,7 @@ border-radius: 15px;}
     font-size: 18px;
   }
   
-  .hero-section {
+  .banniere {
 	  background-size: 160% 66%; 
 	}
 
@@ -1442,7 +1445,7 @@ border-radius: 15px;}
 }
 
 @media screen and (max-width: 540px) {
-	.hero-section {
+	.banniere {
   		background-size: 180% 65%;
 	}
 
