--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -464,6 +464,25 @@ main {
   height: 100vh;
 }
 
+.video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+
 .banniere {
   background-image: url('../images/port/port12.png'), linear-gradient(#348CD2, #FFFFFF);
 }
